Resolved overflow issues on body and main tags and optimised html

--- a/qr-code-component-main/styles.css
+++ b/qr-code-component-main/styles.css
@@ -19,6 +19,8 @@ body{
     font-weight: 400;
     font-size: 15px;
     
+    /* Prevents overflow  */
+    margin: 0;
 }
 
 /* Visually hide h1 but keep it available for screen readers */
@@ -39,6 +41,8 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    gap: 1rem;
     padding: 1rem;
     width: 100%;
     height: 100vh;
